--- a/PKEYConfigExtractor/MainWindow.xaml
+++ b/PKEYConfigExtractor/MainWindow.xaml
@@ -5,14 +5,49 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PKEYConfigExtractor"
         mc:Ignorable="d"
-        Title="PKEYConfigExtractor v1.0" Height="550" Width="650">
+        Title="PKEYConfigExtractor v1.1" Height="550" Width="650" MinHeight="550" MinWidth="650">
     <Grid>
-        <ComboBox x:Name="EditionComboBox" HorizontalAlignment="Center" Margin="0,35,0,0" VerticalAlignment="Top" Width="630"/>
-        <TextBox x:Name="FilePathTextBox" HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="Insert your PKEYConfig file..." VerticalAlignment="Top" Width="630" Height="20" Cursor="Hand" IsReadOnly="True"/>
-        <TextBox x:Name="SerialTextBox" HorizontalAlignment="Left" Margin="10,62,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="70"/>
-        <TextBox x:Name="SecurityTextBox" HorizontalAlignment="Left" Margin="82,62,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="70"/>
-        <Button x:Name="GenerateButton" Content="GENERATE!" HorizontalAlignment="Center" Margin="0,121,0,0" VerticalAlignment="Top" Height="40" Width="262"/>
-        <ListBox x:Name="KeysListBox" Margin="10,166,10,10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="27*"/>
+            <ColumnDefinition Width="103*"/>
+        </Grid.ColumnDefinitions>
+        <TextBox x:Name="FilePathTextBox" Margin="10,10,10,0" TextWrapping="Wrap" Text="Insert your PKEYConfig file..." VerticalAlignment="Top" Height="27" Cursor="Hand" IsReadOnly="True" Grid.ColumnSpan="2"/>
+        <StackPanel Orientation="Horizontal" Margin="10,69,10,0" Height="30" VerticalAlignment="Top" Grid.ColumnSpan="3">
+            <RadioButton x:Name="ComboRadioButton" Content="Select from loaded editions" VerticalAlignment="Center" Margin="0,0,30,0"/>
+            <RadioButton x:Name="ManualRadioButton" Content="Enter Group ID manually" VerticalAlignment="Center"/>
+        </StackPanel>
+        <ComboBox x:Name="MainComboBox" Margin="10,42,10,0" VerticalAlignment="Top" Height="25" Grid.ColumnSpan="2">
+            <ListBox x:Name="EditionListBox" 
+             MaxHeight="400"
+             MinWidth="{Binding ActualWidth, ElementName=MainComboBox}"
+             SelectionMode="Multiple"
+             PreviewMouseDown="EditionListBox_PreviewMouseDown">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal" Margin="2">
+                            <CheckBox x:Name="ItemCheckBox" 
+                              IsChecked="{Binding IsChecked, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                              Margin="0,0,2,0"
+                              VerticalAlignment="Center"/>
+                            <TextBlock Text="{Binding Content}" VerticalAlignment="Center"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </ComboBox>
+        <TextBox x:Name="GroupIdTextBox" Margin="0,73,10,0" TextWrapping="Wrap" Text="[GROUP ID]" VerticalAlignment="Top" Grid.Column="1" HorizontalAlignment="Right" Width="168"/>
+        <TextBox x:Name="SerialTextBox" HorizontalAlignment="Left" Margin="10,101,0,0" TextWrapping="Wrap" Text="[SERIAL]" VerticalAlignment="Top" Width="132" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="SecurityTextBox" HorizontalAlignment="Left" Margin="10,125,0,0" TextWrapping="Wrap" Text="[SECURITY]" VerticalAlignment="Top" Width="132" Grid.ColumnSpan="2"/>
+        <TextBlock Margin="10,148,0,0" TextWrapping="Wrap" FontSize="9" Foreground="Gray" HorizontalAlignment="Left" Width="202" Grid.ColumnSpan="2" Height="24" VerticalAlignment="Top">
+            <Run Text="SERIAL: 0x0 - 0x3FFFFFFF"/>
+            <LineBreak/>
+            <Run Text="SECURITY: 0x0 - 0x1FFFFFFFFFFFFF"/>
+        </TextBlock>
+        <CheckBox x:Name="RandomCheckBox" Content="Use random valid [SERIAL] and [SECURITY]..." HorizontalAlignment="Left" Margin="10,175,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <TextBlock HorizontalAlignment="Right" Margin="0,133,74,0" TextWrapping="Wrap" Text="How many to generate? (max. 500):" VerticalAlignment="Top" Grid.Column="1"/>
+        <TextBox x:Name="CountTextBox" Margin="0,130,10,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" HorizontalAlignment="Right" Width="59" Grid.Column="1"/>
+        <Button x:Name="GenerateButton" Content="GENERATE!" Margin="0,157,10,0" VerticalAlignment="Top" Height="34" HorizontalAlignment="Right" Width="251" Grid.Column="1"/>
+        <ListBox x:Name="KeysListBox" Margin="10,195,10,22" Grid.ColumnSpan="2">
             <ListBox.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Copy Selected" Click="CopySelected_Click"/>
@@ -20,13 +55,6 @@
                 </ContextMenu>
             </ListBox.ContextMenu>
         </ListBox>
-        <CheckBox x:Name="RandomCheckBox" Content="Use random valid [SERIAL] and [SECURITY]..." HorizontalAlignment="Left" Margin="376,68,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="CountTextBox" HorizontalAlignment="Left" Margin="568,91,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="59"/>
-        <TextBlock HorizontalAlignment="Left" Margin="376,91,0,0" TextWrapping="Wrap" Text="How many to generate? (max. 100):" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Margin="10,85,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="9" Foreground="Gray" Width="202">
-            <Run Text="SERIAL: 0x0 - 0x3FFFFFFF"/>
-            <LineBreak/>
-            <Run Text="SECURITY: 0x0 - 0x1FFFFFFFFFFFFF"/>
-        </TextBlock>
+        <ProgressBar x:Name="GenerationProgressBar"  Margin="11,0,10,7" Grid.ColumnSpan="2" Height="10" VerticalAlignment="Bottom"/>
     </Grid>
 </Window>
